View Issue Details

IDProjectCategoryView StatusLast Update
0025920Open CASCADEOCCT:Modeling Algorithmspublic2016-12-09 16:39
Reporterapn Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version7.1.0Fixed in Version7.1.0 
Summary0025920: BRepAlgoAPI_Fuse makes invalid result
DescriptionBRepAlgoAPI_Fuse makes invalid result in test case bugs modalg_2 bug426_1
...
Draw[]> OCC426 result rs1 rs2 rs3 fuse32 fuse321
fuse32 = BRepAlgoAPI_Fuse(rs3, rs2)
fuse321 = BRepAlgoAPI_Fuse(fuse32, rs1)

Mass: 25918.139392115794

Trianglating Faces .....
No of Triangles = 50
No of Triangles = 49
No of Triangles = 49
No of Triangles = 12
No of Triangles = 36
No of Triangles = 36
No of Triangles = 2
No of Triangles = 2
No of Triangles = 49
No of Triangles = 49
No of Triangles = 12
No of Triangles = 50
Triangulation of all Faces Completed.

No. of Edges: 28
Adding Edges .....
All Edges added ! Now Building the Blend ...

Draw[]> checkshape rs1
This shape seems to be valid
Draw[]> checkshape rs2
This shape seems to be valid
Draw[]> checkshape rs3
This shape seems to be valid
Draw[]> checkshape fuse32
This shape seems to be valid
Draw[]> checkshape fuse321
This shape seems to be valid

Draw[]> checkshape result
On Shape faulty_1 :
BRepCheck_UnorientableShape
Shape faulty_2 on shape faulty_1 :
BRepCheck_NotClosed
On Shape faulty_3 :
BRepCheck_UnorientableShape
Shape faulty_4 on shape faulty_3 :
BRepCheck_NotClosed
Shape faulty_5 on shape faulty_6 :
BRepCheck_NotClosed
Faulty shapes in variables faulty_1 to faulty_6

It seems that in test case bugs modalg_2 bug426 BRepAlgo_Fuse works properly.
Steps To ReproduceOCC426 result rs1 rs2 rs3 fuse32 fuse321
(BRepAlgoAPI/BRepAlgo = 1/0 - default value is 1)
TagsNo tags attached.
Test case numberbugs modalg_2 bug426

Relationships

related to 0027598 closedbugmaster Open CASCADE Failures of tests with VS 2015 

Activities

msv

2016-08-15 12:38

developer   ~0056710

In the current master, the situation is reversed. In the "test bugs modalg_2 bug426_1" fuse321 is correct, and in the test "bugs modalg_2 bug426" fuse321 is a bad shape:

Shape faulty_1 on shape faulty_2 :
BRepCheck_NotClosed

Faulty shapes in variables faulty_1 to faulty_2

So, BRepAlgoAPI_Fuse works correctly, and BRepAlgo_Fuse works incorrectly.
Since the class BRepAlgo_Fuse represents the front end of the old Boolean operations, which is not supported any more, I propose to remove test case "bugs modalg_2 bug426".

msv

2016-08-15 12:40

developer   ~0056711

Dear Andrey, do you agree with removal of obsolete test case "bugs modalg_2 bug426", which has state "Fail" now?

abv

2016-11-09 22:37

manager   ~0060155

No, I do not agree to remove the test until we keep relevant functionality in OCCT

git

2016-11-21 11:21

administrator   ~0060600

Branch CR25920 has been created by msv.

SHA-1: d673da182b5677583e7c57272dbede4f13af0b00


No new revisions were added by this update.

git

2016-11-21 11:24

administrator   ~0060601

Branch CR25920 has been updated by msv.

SHA-1: 1975b43ca7b07b4a1a3115afc48adcefcc6a00dc


Detailed log of new commits:

Author: msv
Date: Mon Nov 21 11:24:23 2016 +0300

    0025920: BRepAlgoAPI_Fuse makes invalid result
    
    The command OCC426 for test case bugs modalg_2 bug426 has been modified in order to make the test passed. The modification concerns only the old Boolean operation branch (BRepAlgo_Fuse).

msv

2016-11-21 11:26

developer   ~0060602

Please test only the cases that depend on the change:

bugs modalg_2 bug426
bugs modalg_2 bug426_1

msv

2016-11-21 11:29

developer   ~0060603

Note that the bug was reproduced only on several platforms VS2013, VS2015.

apn

2016-11-23 12:04

administrator   ~0060719

Last edited: 2016-11-23 12:05

Before fix (e.g. on vc14):
bugs modalg_2 bug426 - FAILED (An exception was caught 000001DB8F173660 : StdFail_NotDone: BRep_API: command not done_
http://occt-tests/bug25920_wo_fix/bugs/modalg_2/bug426.html
bugs modalg_2 bug426_1 - BAD

Test cases were checked on vc14 with fix CR25920:
bugs modalg_2 bug426 - OK
bugs modalg_2 bug426_1 - BAD
http://occt-tests/bug25920_wnt_vc14/summary.html

Test cases were checked on vc10 with fix CR25920:
bugs modalg_2 bug426 - OK
bugs modalg_2 bug426_1 - BAD
http://occt-tests/bug25920_wnt_vc10/summary.html

git

2016-12-07 11:30

administrator   ~0061234

Branch CR25920 has been deleted by kgv.

SHA-1: 1975b43ca7b07b4a1a3115afc48adcefcc6a00dc

Related Changesets

occt: master bb2cf069

2016-11-21 08:24:23

msv


Committer: apn Details Diff
0025920: BRepAlgoAPI_Fuse makes invalid result

The command OCC426 for test case bugs modalg_2 bug426 has been modified in order to make the test passed. The modification concerns only the old Boolean operation branch (BRepAlgo_Fuse).
Affected Issues
0025920
mod - src/QABugs/QABugs_10.cxx Diff File

Issue History

Date Modified Username Field Change
2015-03-12 15:28 apn New Issue
2015-03-12 15:28 apn Assigned To => msv
2015-03-12 15:29 apn Test case number => bugs modalg_2 bug426
2015-04-17 00:02 abv Target Version 6.9.0 => 7.1.0
2016-08-15 12:33 msv Relationship added related to 0027598
2016-08-15 12:38 msv Note Added: 0056710
2016-08-15 12:40 msv Note Added: 0056711
2016-08-15 12:40 msv Assigned To msv => abv
2016-08-15 12:40 msv Status new => feedback
2016-11-09 22:37 abv Assigned To abv => msv
2016-11-09 22:37 abv Note Added: 0060155
2016-11-18 17:25 msv Target Version 7.1.0 => 7.2.0
2016-11-21 11:21 git Note Added: 0060600
2016-11-21 11:24 git Note Added: 0060601
2016-11-21 11:25 msv Status feedback => resolved
2016-11-21 11:26 msv Note Added: 0060602
2016-11-21 11:26 msv Assigned To msv => bugmaster
2016-11-21 11:26 msv Status resolved => reviewed
2016-11-21 11:29 msv Note Added: 0060603
2016-11-21 15:04 abv Target Version 7.2.0 => 7.1.0
2016-11-21 15:06 apv Assigned To bugmaster => apn
2016-11-23 12:04 apn Note Added: 0060719
2016-11-23 12:05 apn Note Edited: 0060719
2016-11-23 12:09 apn Assigned To apn => bugmaster
2016-11-23 12:09 apn Status reviewed => tested
2016-11-24 15:52 apn Changeset attached => occt master bb2cf069
2016-11-24 15:52 apn Assigned To bugmaster => apn
2016-11-24 15:52 apn Status tested => verified
2016-11-24 15:52 apn Resolution open => fixed
2016-12-07 11:30 git Note Added: 0061234
2016-12-09 16:30 aiv Status verified => closed
2016-12-09 16:39 aiv Fixed in Version => 7.1.0